--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "testesterone",
+  "name": "test_tea_project",
   "version": "1.1.1",
   "description": "In-browser test runner and assertion library",
   "main": "index.js",
   "scripts": {
-    "build": "rollup -c rollup.config.js && rollup -c test/demo1/rollup.config.js && rollup -c test/demo2/rollup.config.js --watch",
-    "test": "open test/demo1/index.html"
+    "build": "rollup -c rollup.config.js && rollup -c test/demo1/rollup.config.js --watch",
+    "test": "open test/index.html"
   },
   "repository": {
     "type": "git",
